Added style for link add weight

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -128,3 +128,9 @@ html, body {
   padding: 0 20px;
   display: none;
 }
+
+.add-weight {
+  font-weight: bold;
+  float: right;
+  padding: 0 7px;
+}
