--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -64,6 +64,7 @@ html, body {
   min-height: 72px;
   background: $white;
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
+  padding: 10px;
 }
 
 .d-flex {
