Added link logout

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -147,6 +147,19 @@ html, body {
   top: 14px;
 }
 
+.logout-icon {
+  width: 25px;
+  height: 25px;
+  background: url('/img/logout.svg') center center no-repeat;
+  position: absolute;
+  cursor: pointer;
+  right: 8px;
+  padding-top: 0;
+  z-index: 999;
+  top: 14px;
+  left: 430px;
+}
+
 #clear-input-a {
   left: 185px;
 }
